Refactors the code to make a more generic user interface